# OOP_arcade_2018

./: .gitignore  CMakeLists.txt  Makefile  README.md  cov.sh  main.cpp  scores.txt  shell.nix
assets/audio/: sound.m4a
component/: ASprite.cpp  ASprite.hpp  Audio.cpp  Audio.hpp  IAudio.hpp  IComponent.hpp  ISprite.hpp  IText.hpp  Key.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
core/: Makefile
core/src/: Core.cpp  Core.hpp  Process.hpp  Score.cpp  Score.hpp
core/src/scenes/: Scene.cpp  Scene.hpp  SceneFactory.cpp  SceneFactory.hpp  SceneManager.cpp  SceneManager.hpp  Scenes.hpp  SharedData.hpp
core/src/scenes/exit/: ExitScene.cpp
core/src/scenes/game/: GameScene.cpp
core/src/scenes/menu/: MainMenu.cpp  MainMenu.hpp
core/src/scenes/player_name/: Cursor.cpp  PlayerName.cpp  PlayerName.hpp  Row.hpp
core/src/scenes/score_board/: ScoreBoard.cpp  ScoreBoard.hpp
core/src/scenes/utils/: Button.cpp  Button.hpp
doc/: doc.aux  doc.blg  doc.tex  doc.toc
games/: IGame.hpp  Makefile
games/nibbler/: Makefile
games/nibbler/src/: Food.cpp  Food.hpp  Map.cpp  Map.hpp  MapTest.cpp  MathUtils.cpp  MathUtils.hpp  Nibbler.cpp  Nibbler.hpp  NibblerTest.cpp  PlayerDirection.hpp  Pos.hpp  Snake.cpp  Snake.hpp  SnakeTest.cpp
games/qix/: Makefile
games/qix/src/: Cell.cpp  Cell.hpp  CellTest.cpp  Converter.cpp  Converter.hpp  ConverterTest.cpp  Game.cpp  Game.hpp  GameTest.cpp  Map.cpp  Map.hpp  MapTest.cpp  Player.cpp  Player.hpp  PlayerTest.cpp  Position.cpp  Position.hpp  Qix.cpp  Qix.hpp
lib/: IGraphic.hpp  Makefile
lib/caca/: CacaGraphic.cpp  CacaGraphic.hpp  Makefile
lib/qt/: Graphic.cpp  Graphic.hpp  IGraphic.hpp  QtGraphic.cpp  QtGraphic.hpp  Test.cpp  Test.hpp  Widget.cpp  Widget.hpp  _arcade_qt5.pro  qt5.pro
lib/sfml/: Makefile
lib/sfml/src/: SfmlGraphic.cpp  SfmlGraphic.hpp
src/: ArgParser.cpp  ArgParser.hpp  Basic.cpp  Basic.hpp  BasicTest.cpp  Core.cpp  Core.hpp  Process.cpp  Process.hpp
src/menu/: Button.cpp  Button.hpp  MainMenu.cpp  MainMenu.hpp  MainMenuTest.cpp
src/scenes/: AScene.cpp  AScene.hpp  IScene.cpp  IScene.hpp  PlayerData.cpp  PlayerData.hpp  Scene.cpp  Scene.hpp  SceneFactory.cpp  SceneFactory.hpp  SceneManager.cpp  SceneManager.hpp  Scenes.cpp  Scenes.hpp  ScenesTest.cpp  SharedData.cpp  SharedData.hpp
src/scenes/exit/: ExitScene.hpp
src/scenes/game/: GameScene.cpp  GameScene.hpp
src/scenes/menu/: MainMenu.cpp  MainMenu.hpp
src/scenes/player_name/: Cursor.cpp  Cursor.hpp  PlayerName.cpp  PlayerName.hpp  Row.cpp  Row.hpp
src/scenes/utils/: Button.cpp  Button.hpp
